feat: 完善爬虫与前端功能，清理仓库中的临时文件
- 爬虫: 增强JD公众满意度数据采集，优化候选商品召回与评分逻辑

- 后端: 完善公众满意度任务调度与数据接口

- 前端: 未登录访问受保护页面时增加提示信息，优化商品分析与数据管理页面

- 数据预处理: 扩充样本量至10000条，优化清洗与分析流程

- .gitignore: 修复UTF-16编码错误，补全浏览器Profile、爬虫输出等忽略规则

- 清理: 移除仓库中误提交的浏览器缓存、爬虫输出及临时数据文件